Fix overflow on members overview in teams

--- a/src/app/home/teams/teams.module.scss
+++ b/src/app/home/teams/teams.module.scss
@@ -195,6 +195,7 @@
   text-align: center;
   
   padding: 13px 30px;
+  overflow-y: auto;
 
   hr {
     margin-bottom: 9px;
@@ -212,6 +213,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
 
   > div {
     display: flex;
